k3d/nginx/config/service.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx
  labels:
    app: nginx

spec:
  selector:
    app: nginx
  ports:
    - port: 80
      protocol: TCP
